--- a/TestWebApi03.WebApi/Content/Site.css
+++ b/TestWebApi03.WebApi/Content/Site.css
@@ -23,11 +23,15 @@
 
 .actionIcon {
     position: absolute;
-    top: 10px;
-    right: 10px;
-    margin: 2px;
+    top: 0px;
+    right: 0px;
+    padding: 10px;
+    -webkit-border-bottom-left-radius: 8px;
+    -moz-border-radius-bottomleft: 8px;
+    border-bottom-left-radius: 8px;
 }
 .actionIcon:hover {
     background-color: #e1e1e1;
-    padding: 2px;
+    /*padding: 2px;*/
+    color: steelblue !important;
 }
